# Homomorphic_Component

./: .gitattributes  CMakeLists.txt  README.md
all_libs/openssl-3.0.14/: configdata.pm  libssl.pc  libssl.so.3  pod2htmd.tmp
all_libs/openssl-3.0.14/crypto/: buildinf.h
all_libs/openssl-3.0.14/crypto/property/: libcrypto-lib-property_parse.d  libcrypto-shlib-property_parse.d
all_libs/openssl-3.0.14/doc/html/man1/: openssl-cmp.html
all_libs/openssl-3.0.14/doc/html/man3/: DEFINE_STACK_OF.html  EVP_DigestInit.html
all_libs/openssl-3.0.14/doc/html/man7/: migration_guide.html
all_libs/openssl-3.0.14/doc/man/man1/: CA.pl.1  openssl-crl.1  openssl-crl2pkcs7.1  openssl-dhparam.1  openssl-dsa.1  openssl-ec.1  openssl-ecparam.1  openssl-format-options.1  openssl-genpkey.1  openssl-info.1  openssl-kdf.1  openssl-mac.1  openssl-passphrase-options.1  openssl-pkcs12.1  openssl-pkcs7.1  openssl-pkcs8.1  openssl-pkey.1  openssl-pkeyparam.1  openssl-rand.1  openssl-req.1  openssl-rsa.1  openssl-rsautl.1  openssl-s_server.1  openssl-sess_id.1  openssl-spkac.1  openssl-srp.1  openssl-verification-options.1  openssl-verify.1  openssl-version.1  openssl.1  tsget.1
all_libs/openssl-3.0.14/doc/man/man3/: ASN1_ITEM_lookup.3  ASN1_OBJECT_new.3  ASN1_STRING_TABLE_add.3  ASN1_STRING_new.3  ASN1_STRING_print_ex.3  ASN1_TIME_set.3  ASN1_TYPE_get.3  ASN1_item_new.3  ASN1_item_sign.3  ASYNC_WAIT_CTX_new.3  ASYNC_start_job.3  BF_encrypt.3  BIO_connect.3  BIO_f_buffer.3  BIO_f_null.3  BIO_f_prefix.3  BIO_f_readbuffer.3  BIO_f_ssl.3  BIO_find_type.3  BIO_get_ex_new_index.3  BIO_meth_new.3  BIO_new.3  BIO_new_CMS.3  BIO_push.3  BIO_read.3  BIO_s_accept.3  BIO_s_datagram.3  BIO_s_fd.3  BIO_s_file.3  BIO_s_mem.3  BIO_s_null.3  BIO_set_callback.3  BN_BLINDING_new.3  BN_bn2bin.3  BN_copy.3  BN_mod_exp_mont.3  BN_mod_mul_montgomery.3  BN_mod_mul_reciprocal.3  BN_new.3  BN_num_bytes.3  (+275 more)
all_libs/openssl-3.0.14/doc/man/man5/: x509v3_config.5
all_libs/openssl-3.0.14/doc/man/man7/: EVP_ASYM_CIPHER-SM2.7  EVP_CIPHER-AES.7  EVP_CIPHER-ARIA.7  EVP_CIPHER-BLOWFISH.7  EVP_CIPHER-CAST.7  EVP_CIPHER-CHACHA.7  EVP_CIPHER-DES.7  EVP_CIPHER-NULL.7  EVP_CIPHER-RC2.7  EVP_CIPHER-RC4.7  EVP_CIPHER-SEED.7  EVP_CIPHER-SM4.7  EVP_KDF-KRB5KDF.7  EVP_KDF-PBKDF2.7  EVP_KDF-PKCS12KDF.7  EVP_KDF-SS.7  EVP_KDF-SSHKDF.7  EVP_KDF-TLS13_KDF.7  EVP_KDF-X942-CONCAT.7  EVP_KDF-X963.7  EVP_MAC-KMAC.7  EVP_MAC-Poly1305.7  EVP_MAC-Siphash.7  EVP_MD-MD2.7  EVP_MD-MD5-SHA1.7  EVP_MD-MDC2.7  EVP_MD-RIPEMD160.7  EVP_MD-SHA3.7  EVP_MD-SHAKE.7  EVP_MD-SM3.7  EVP_MD-WHIRLPOOL.7  EVP_MD-common.7  EVP_PKEY-DH.7  EVP_PKEY-DSA.7  EVP_PKEY-HMAC.7  EVP_PKEY-SM2.7  EVP_RAND-CTR-DRBG.7  EVP_RAND-HASH-DRBG.7  EVP_RAND-TEST-RAND.7  EVP_RAND.7  (+29 more)
all_libs/openssl-3.0.14/doc/man1/: openssl-crl.pod  openssl-mac.pod  openssl-req.pod  openssl-smime.pod  openssl-storeutl.pod  openssl-ts.pod
all_libs/openssl-3.0.14/fuzz/: asn1-test
all_libs/openssl-3.0.14/install/lib64/pkgconfig/: libcrypto.pc  openssl.pc
all_libs/openssl-3.0.14/install/share/man/man1/: openssl-asn1parse.1ossl  openssl-ca.1ossl  openssl-ciphers.1ossl  openssl-cmds.1ossl  openssl-cmp.1ossl  openssl-cms.1ossl  openssl-dgst.1ossl  openssl-dsaparam.1ossl  openssl-enc.1ossl  (+20 more)
all_libs/openssl-3.0.14/test/: asynciotest  bad_dtls_test  ct_test  dtls_mtu_test  dtlstest  ecstresstest  evp_test  fatalerrtest  pkey_meth_kdf_test  recordlentest  servername_test  shlibloadtest  sslapitest  sslbuffertest  sslbuffertest-bin-sslbuffertest.d  sslcorrupttest  tls13ccstest  v3ext  versions
all_libs/openssl-3.0.14/test/helpers/: asynciotest-bin-ssltestlib.d  dtls_mtu_test-bin-ssltestlib.d  dtlstest-bin-ssltestlib.d  fatalerrtest-bin-ssltestlib.d  recordlentest-bin-ssltestlib.d  servername_test-bin-ssltestlib.d  sslapitest-bin-ssltestlib.d  sslbuffertest-bin-ssltestlib.d  sslcorrupttest-bin-ssltestlib.d  tls13ccstest-bin-ssltestlib.d
all_libs/openssl-3.0.14/tools/: c_rehash
all_libs/openssl-3.0.14/util/: wrap.pl
all_libs/tfhe-4096/src/libtfhe/: boot-gates.cpp  lwe-bootstrapping-functions-fft.cpp  lwe-bootstrapping-functions.cpp  tfhe_gate_bootstrapping.cpp
all_libs/tfhe-4096/src/test/: boots_gates_test.cpp  bootstrapping_test.cpp  bootstrapping_test_fft.cpp  io_test.cpp  lagrangehalfc_test.cpp  test-addition-boot.cpp  test-bootstrapping-fft.cpp  test-c-binding.c  test-decomp-tgsw.cpp  test-gate-bootstrapping.cpp  test-long-run.cpp  test-lwe.cpp  test-multiplication.cpp  test-tlwe.cpp
all_libs/tfhe-4096/src/test/fakes/: lwe-bootstrapping-fft.h  lwe-bootstrapping.h  lwe-keyswitch.h  lwe.h
all_libs/tfhe-operators-master/more_operations/: CMakeLists.txt
all_libs/tfhe-operators-master/more_operations/include/: clear-utils.h  extended-bootstrap.h  fhe_argmax.h  fhe_distance.h  funxtensions.h  more_tfhe.h  more_tfhe_io.h  more_tfhe_structures.h  mux_ops.h  operators.h  private-bootstrap.h  scaled_boot.h  scaled_fhe_distance.h  scaled_operators.h  scaled_private_operators.h  test_vector.h
all_libs/tfhe-operators-master/more_operations/src/: Mux_Ops.cpp  clear-utils.cpp  extended-bootstrap.cpp  fhe_argmax.cpp  fhe_distance.cpp  funxtensions.cpp  more_tfhe_io.cpp  operators.cpp  private-bootstrap.cpp  scaled_boot.cpp  scaled_operators.cpp  scaled_private_operators.cpp  test_vector.cpp
all_libs/tfhe-operators-master/new_tfhe/: CMakeLists.txt
all_libs/tfhe-operators-master/new_tfhe/include/: priv_keyswitch.h  scaled_alloc.h  scaled_tfhe.h  scaled_tlwe_functions.h  scaled_tlwe_keyswitch.h  scaled_tlwe_keyswitch_functions.h
all_libs/tfhe-operators-master/new_tfhe/src/: priv_keyswitch.cpp  scaled_tlwe_functions.cpp  scaled_tlwe_keyswitch.cpp  scaled_tlwe_keyswitch_functions.cpp
data/CountryDB/: modelciph.txt  modelcosineciph.txt  modelsqciph.txt
data/E-Gate/: Test_Biometrics1  Test_Biometrics2
data/Traveller/Example Models/: Arnaud  Oana_model  sap_model
include/: dataIO.h  keysEGate.h  keysHEComp.h  keysUser.h  params.h  token.h  utils.h  utils2.h
src/: HESysInit.cpp  Register.cpp  Verify.cpp  dataIO.cpp  keysEGate.cpp  keysHEComp.cpp  keysUser.cpp  params.cpp  token.cpp  utils.cpp  utils2.cpp
(+363 files in other folders)
